--- a/responsive.css
+++ b/responsive.css
@@ -208,4 +208,7 @@
                     position: absolute;
                     top: -25;
                     }
+               #denemebuton{
+                        margin-top: 50px;
+                    }
           }
