--- a/responsive.css
+++ b/responsive.css
@@ -211,6 +211,14 @@
                #denemebuton{
                         margin-top: 50px;
                     }
+                  #navorta{
+                        display: flex;
+                        width: 100%;
+                        height: 100%;
+                        margin-left: auto;
+                        margin-right:auto;
+                        justify-content: space-between;
+                    }
           }
 
  @media screen and (max-width:500px){
